--- a/Project-C/Project-C.vcxproj.filters
+++ b/Project-C/Project-C.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="Source.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="AreaPerimetro.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
