--- a/Project-C/Project-C.vcxproj
+++ b/Project-C/Project-C.vcxproj
@@ -64,6 +64,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="functions.h" />
     <ClInclude Include="Header.h" />
   </ItemGroup>
   <ItemGroup>
