--- a/Project-C/Project-C.vcxproj
+++ b/Project-C/Project-C.vcxproj
@@ -68,6 +68,7 @@
     <ClInclude Include="Header.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Ordenacao.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="AreaPerimetro.cpp" />
   </ItemGroup>
